# yaft2

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  INTELLISENSE_IMPLEMENTATION_SUMMARY.md  IOS_FORENSICS_GUIDE.md  LICENSE.md  Makefile  NOTICE  PROJECT_SUMMARY.md  README.md  UV_QUICKSTART.md  build.bat  build.py  build.sh  build_exe.py  coverage.xml  create_plugin.py  plugins_manifest.json  pyproject.toml  requirements-dev.txt  requirements-pdf.txt  requirements.txt  temp_freeze.txt  test_plugin_updater_config.py
.claude/: settings.local.json
.claude/agents/: mobile-forensics-analyst.md
.github/: RELEASE.md
.github/workflows/: ci.yml  release.yml  update-manifest.yml
.plugin_cache/: manifest.json
config/: ai.toml  logging.toml  plugin_updater.toml
docs/: ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  PDF_EXPORT.md  PLUGIN_DEVELOPMENT.md  PLUGIN_DEVELOPMENT_SE.md  PLUGIN_REGISTRY.md  PLUGIN_UPDATE_SYSTEM_PROPOSAL.md  PluginIdeas.md  PluginResearch.md  QUICKSTART.md  RELEASE_CHECKLIST.md  RELEASE_CHECKLIST_QUICK.md  SQLCIPHER_INTEGRATION.md  SystemRequirements.md  YaFT.md
docs/quickstart/: QUICKSTART_GITHUB.md  RELEASE.md
docs/source_to_rebuild/: app_guid_extractor.py  (+1 more)
examples/: sqlcipher_example_plugin.py
mcp/: README.md  server.py  yaft_adapter.py
plugins/: android_app_info_extractor.py  android_app_permissions_extractor.py  android_call_log_analyzer.py  android_device_info_extractor.py  contact_photo_extractor.py  file_processor.py  genericparserplugin.py  hello_world.py  ios_app_guid_extractor.py  ios_app_permissions_extractor.py  ios_biome_batt_perc.py  ios_biome_dev_wifi.py  ios_call_log_analyzer.py  ios_cellular_info_extractor.py  ios_device_info_extractor.py  ios_health.py  ios_keychain_analyzer.py  ios_knowledgec.py  ios_wal_strings.py  system_info.py  zip_analyzer.py
profiles/: README.md  android_apps_analysis.toml  android_full_analysis.toml  ios_device_only.toml  ios_full_analysis.toml
scripts/: README.md  analyze_core_api.py  generate_manifest.py
tests/: __init__.py  conftest.py  test_ai_config.py  test_ai_providers.py  test_android_app_info_extractor.py  test_android_app_permissions_extractor.py  test_android_call_log_analyzer.py  test_android_device_info_extractor.py  test_api_docs.py  test_blob_handling.py  test_contact_photo_extractor.py  test_core_api.py  test_ios_biome_batt_perc.py  test_ios_biome_dev_wifi.py  test_ios_call_log_analyzer.py  test_ios_cellular_info_extractor.py  test_ios_device_info_extractor.py  test_ios_health.py  test_ios_keychain_analyzer.py  test_ios_knowledgec.py  test_ios_wal_strings.py  test_keychain_keystore.py  test_logging_config.py  test_plugin_base.py  test_plugin_manager.py  test_plugin_profiles.py  test_plugin_updater.py  test_sqlcipher.py  test_zip_file_search.py
tools/: README.md
yaft-gui/: .gitignore  LICENSE  QUICKSTART.md  README.md  build_exe.py  pyproject.toml  requirements-dev.txt  requirements.txt
yaft-gui/.github/workflows/: build-gui.yml
yaft-gui/src/yaft_gui/: __init__.py  main.py
yaft-gui/src/yaft_gui/core/: __init__.py  yaft_interface.py
yaft-gui/src/yaft_gui/ui/: __init__.py  main_window.py  output_viewer.py  plugin_list.py
yaft-gui/src/yaft_gui/utils/: __init__.py
yaft-gui/tests/: __init__.py  test_yaft_interface.py
(+19 files in other folders)
